glsl/linker: add nir_linker
Utilities to deal with ir/nir

Simplication of original Nicolai's commit:
"glsl/linker: start linking NIR shaders for SPIR-V"

It only takes the nir to ir method. Using it should be a temporary
solution until a real abstraction/refactoring of glsl linking methods
are done.

FIXME: perhaps move to a common nir/glsl folder, and renaming it,
specially as we already have a nir/nir_linker.h header (or at least do
the renaming)

v2: only expose nir_to_ir_variable, change commit message. (Alejandro)
v3: change ifndef NIR_LINKER_H for NIR_GLSL_LINKER_H (Alejandro)

Signed-off-by: Alejandro Piñeiro <apinheiro@igalia.com>
Signed-off-by: Nicolai Hähnle <nicolai.haehnle@amd.com>

--- a/src/compiler/Makefile.sources
+++ b/src/compiler/Makefile.sources
@@ -112,6 +112,8 @@ LIBGLSL_FILES = \
 	glsl/lower_output_reads.cpp \
 	glsl/lower_shared_reference.cpp \
 	glsl/lower_ubo_reference.cpp \
+	glsl/nir_linker.cpp \
+	glsl/nir_linker.h \
 	glsl/opt_algebraic.cpp \
 	glsl/opt_array_splitting.cpp \
 	glsl/opt_conditional_discard.cpp \
