--- a/src/mesa/Makefile.sources
+++ b/src/mesa/Makefile.sources
@@ -203,6 +203,8 @@ MAIN_FILES = \
 	main/shader_query.cpp \
 	main/shared.c \
 	main/shared.h \
+        main/spirvextensions.c \
+	main/spirvextensions.h \
 	main/state.c \
 	main/state.h \
 	main/stencil.c \
